// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-badge should render with _label="**Te**xt" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            <strong>
              Te
            </strong>
            xt
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _color="#000000" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" _color="#000000" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <kol-icon _icons="codicon codicon-home" _label="" class="icon left"></kol-icon>
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <kol-icon _icons="codicon codicon-home" _label="" class="icon left"></kol-icon>
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;
